CheckIn: Fix Bugzilla Bug 231259 Prompts are missing full stop in Datasource and dataset dialog.

--- a/plugins/org.eclipse.datatools.connectivity.oda.flatfile.ui/src/org/eclipse/datatools/connectivity/oda/flatfile/ui/i18n/messages.properties
+++ b/plugins/org.eclipse.datatools.connectivity.oda.flatfile.ui/src/org/eclipse/datatools/connectivity/oda/flatfile/ui/i18n/messages.properties
@@ -12,14 +12,14 @@
 #************************************************************************
 #
 wizard.title.selectColumns=Select Columns
-wizard.defaultMessage.selectFolder=Select the folder that contains the flat files
-wizard.defaultMessage.selectFile=Select the file and the columns for the data set
+wizard.defaultMessage.selectFolder=Select the folder that contains the flat files.
+wizard.defaultMessage.selectFile=Select the file and the columns for the data set.
 
 label.selectFolder=Select &folder: 
 label.selectFile=Select f&ile:
 label.fileFilter=File filte&r:
-label.includeTypeLine=Use second line as &data type indicator
-label.includeColumnNameLine = Use first line as column &name indicator
+label.includeTypeLine=Use second line as &data type indicator.
+label.includeColumnNameLine = Use first line as column &name indicator.
 label.selectCharset=Select &charset:
 label.selectFlatfileStyle=Select flatfile &style:
 label.flatfileComma=CSV
@@ -41,13 +41,13 @@ datatypes.date=Date
 datatypes.time=Time
 datatypes.boolean=Boolean
 
-tooltip.flatfilestyle=Move the mouse to each flat file style for more infomation
+tooltip.flatfilestyle=Move the mouse to each flat file style for more infomation.
 tooltip.csv=Comma-{ , } Seperated Values
 tooltip.ssv=Semicolon-{ ; } Seperated Values
 tooltip.psv=Pipe-{ | } Seperated Values
 tooltip.tsv=Tab-{ Tab } Seperated Values
-tooltip.columnnameline=Please make sure the existence of column names\n in the first row of the selected file
-tooltip.typeline=Please make sure the existence of data type line\n in the second row of the selected file
+tooltip.columnnameline=Please make sure the existence of column names\n in the first row of the selected file.
+tooltip.typeline=Please make sure the existence of data type line\n in the second row of the selected file.
 error.selectFolder=Please select a valid folder.
 error.selectColumns=Please select at least one column for this data set.
 error.emptyPath=Please enter a path.
