CheckIn: Fix Bugzilla Bug 231259 Prompts are missing full stop in Datasource and dataset dialog.

--- a/plugins/org.eclipse.datatools.enablement.oda.xml.ui/src/org/eclipse/datatools/enablement/oda/xml/ui/i18n/messages.properties
+++ b/plugins/org.eclipse.datatools.enablement.oda.xml.ui/src/org/eclipse/datatools/enablement/oda/xml/ui/i18n/messages.properties
@@ -11,7 +11,7 @@
 ###############################################################################
 # wizard dialog messages
 wizard.title.selectFolder=XML Data Source
-wizard.defaultMessage.selectFolder=Define the URLs to the XML file and schema information
+wizard.defaultMessage.selectFolder=Define the URLs to the XML file and schema information.
 wizard.title.newDataSet=New Data Set
 wizard.title.selectXmlFile=Select XML Data for Preview
 wizard.defaultMessage.selectFile=Select a sample XML source to enable data preview in this session.
@@ -35,11 +35,11 @@ xPathChoosePage.messages.elementSelection.item.custom=C&ustom XPath Expression
 xPathChoosePage.messages.xPathExpression=&XPath Expression
 xPathChoosePage.messages.xmlStructure=XML Structure
 xPathChoosePage.messages.xmlColumnMapping=Column Mapping
-xPathChoosePage.messages.xpathChange=Make sure the changed table mapping is compatible with the column mapping if applicable   
+xPathChoosePage.messages.xpathChange=Make sure the changed table mapping is compatible with the column mapping if applicable.   
 xPathChoosePage.FileNameIcon=File Name Icon
 xPathChoosePage.XMLElementIcon=XML Element Icon
 xPathChoosePage.ColumnIcon=Column Icon
-xPathChoosePage.messages.btnAdd.tooltip=Use the selected node as XPath expression
+xPathChoosePage.messages.btnAdd.tooltip=Use the selected node as XPath expression.
 
 #sample xml data file page messages
 xmlDataSetSelectionPage.messages.lineofdata=lines of source data
@@ -59,16 +59,16 @@ lable.selectXmlFile=Enter the URL of the &XML source or browse to the file conta
 label.selectEncoding=Select &encoding for the XML source and schema specified above:
 lable.selectXmlSchmaFile=Enter the URL of the X&ML schema or browse to the file containing the\n schema. Leave this empty if no schema is available:
 label.preview=&Preview first
-label.useXMLFileFromDataSource=&Use the XML file defined in data source
+label.useXMLFileFromDataSource=&Use the XML file defined in data source.
 RowMappingDialog.title=Select or edit the XPath expression.
 RowMappingDialog.info=Select one of the predefined XPath expressions for the node you selected or\n enter another expression:
-ColumnMappingPage.AddSingleButton.tooltip=Use the selected node as column mapping
-ColumnMappingPage.AddAllButton.tooltip=Use all the children columns of the selected node as column mapping
-ColumnMappingTable.upButton.tooltip=Move column mapping Up
-ColumnMappingTable.downButton.tooltip=Move column mapping Down
-ColumnMappingTable.removeButton.tooltip=Remove column mapping
-ColumnMappingTable.editButton.tooltip=Edit column mapping
-ColumnMappingTable.previewButton.tooltip=Preview the sample XML data 
+ColumnMappingPage.AddSingleButton.tooltip=Use the selected node as column mapping.
+ColumnMappingPage.AddAllButton.tooltip=Use all the children columns of the selected node as column mapping.
+ColumnMappingTable.upButton.tooltip=Move column mapping Up.
+ColumnMappingTable.downButton.tooltip=Move column mapping Down.
+ColumnMappingTable.removeButton.tooltip=Remove column mapping.
+ColumnMappingTable.editButton.tooltip=Edit column mapping.
+ColumnMappingTable.previewButton.tooltip=Preview the sample XML data. 
 ColumnMappingDialog.info.columnName=&Column Name:
 ColumnMappingDialog.info.xPath=&XPath Expression:
 ColumnMappingDialog.info.dataType=&Data Type:
