--- a/plugins/org.eclipse.datatools.enablement.oda.ws.ui/src/org/eclipse/datatools/enablement/oda/ws/ui/i18n/messages.properties
+++ b/plugins/org.eclipse.datatools.enablement.oda.ws.ui/src/org/eclipse/datatools/enablement/oda/ws/ui/i18n/messages.properties
@@ -19,32 +19,32 @@
 
 # WebServiceSelectionPage
 webServiceSelectionPage.message.default=Web Services Data Source
-webServiceSelectionPage.message.error=Specify the SOAP End Point URL or Select a WSDL Descriptor
+webServiceSelectionPage.message.error=Specify the SOAP End Point URL or Select a WSDL Descriptor.
 webServiceSelectionPage.group.wsdl=WSDL Descriptor
 webServiceSelectionPage.group.endPoint=SOAP End Point
 webServiceSelectionPage.group.customClass=Custom Driver Class
 webServiceSelectionPage.group.classPath=Driver Class Path
-webServiceSelectionPage.label.wsdl=If the WSDL descriptor of the Web Services is available, enter its URL or browse to its location in the local file system
+webServiceSelectionPage.label.wsdl=If the WSDL descriptor of the Web Services is available, enter its URL or browse to its location in the local file system.
 webServiceSelectionPage.label.wsdlURI=&WSDL URL or Location:
-webServiceSelectionPage.label.endPoint=Specify the SOAP &End Point URL. You may omit this value if the end point defined in the WSDL is to be used,\nor if you are using a custom connection class that does not require a end point URL
-webServiceSelectionPage.label.customClass=If connection and query to the Web Services is made through a custom &Java class, enter the fully qualified class name here
-webServiceSelectionPage.label.classPath=A semicolon(;)-separated list of additional JAR files and directories to search for the custom driver class
+webServiceSelectionPage.label.endPoint=Specify the SOAP &End Point URL. You may omit this value if the end point defined in the WSDL is to be used,\nor if you are using a custom connection class that does not require a end point URL.
+webServiceSelectionPage.label.customClass=If connection and query to the Web Services is made through a custom &Java class, enter the fully qualified class name here.
+webServiceSelectionPage.label.classPath=A semicolon(;)-separated list of additional JAR files and directories to search for the custom driver class.
 webServiceSelectionPage.button.browse=&Browse...
 
 # OperationPage
-operationPage.message.default=Select an operation defined in the data source's WSDL descriptor
-operationPage.message.operationChanged=Confirm to regenerate the SOAP request and reconnect the End Point
+operationPage.message.default=Select an operation defined in the data source's WSDL descriptor.
+operationPage.message.operationChanged=Confirm to regenerate the SOAP request and reconnect the End Point.
 operationPage.title.operationChanged=Operation Changed
 operationPage.label.selectOpearation=Selected Operation
 operationPage.label.document=Documentation
 
 # SoapParametersPage
-soapParametersPage.message.default=Enter the parameters of chosen WSDL operation
+soapParametersPage.message.default=Enter the parameters of chosen WSDL operation.
 soapParametersPage.button.selectAll=&Select All
 soapParametersPage.button.deselectAll=&Deselect All
 
 # SoapRequestPage
-soapRequestPage.message.default=Edit the SOAP request template of this data set. You may leave the text empty if your data source's custom connecion class code does not require a query text
+soapRequestPage.message.default=Edit the SOAP request template of this data set. You may leave the text empty if your data source's custom connecion class code does not require a query text.
 soapRequestPage.message.regenerateTemplate=This will regenerate the query text template based on the SOAP operation you have selected. It will remove any modifications you have made to the text.\n\nAre you sure?
 soapRequestPage.title.regenerateTemplate=Regenerate Template
 soapRequestPage.button.regenerateTemplate=&Regenerate Template
@@ -57,10 +57,10 @@ parameterInputDialog.column.type=Data Type
 parameterInputDialog.column.defaultValue=Default Value
 
 # SoapResponsePage
-soapResponsePage.message.default=Edit the SOAP response
-soapResponsePage.group.schema=Select SOAP Response Schema
-soapResponsePage.group.xml=Select Sample SOAP response message
-soapResponsePage.radio.defaultSchema=Use &operation response schema defined in data source WSDL
+soapResponsePage.message.default=Edit the SOAP response.
+soapResponsePage.group.schema=Select SOAP Response Schema.
+soapResponsePage.group.xml=Select Sample SOAP response message.
+soapResponsePage.radio.defaultSchema=Use &operation response schema defined in data source WSDL.
 soapResponsePage.radio.externalSchema=Use external XML &schema file:
 soapResponsePage.radio.endPoint=Query Web Services at SOAP &end point:
 soapResponsePage.radio.externalXML=Use external sample &data file
@@ -72,4 +72,4 @@ soapResponsePage.button.connect=&Connect Now
 # XMLColumnMappingPage
 
 # WSConsole
-wsConsole.message.error.cantRetrieveSOAPResponse=SOAP response can't be retrieved, please verify the network or SOAP Response setting
+wsConsole.message.error.cantRetrieveSOAPResponse=SOAP response can't be retrieved, please verify the network or SOAP Response setting.
