--- a/plugins/org.eclipse.datatools.enablement.oracle.ui/src/org/eclipse/datatools/enablement/oracle/internal/ui/drivers/messages.properties
+++ b/plugins/org.eclipse.datatools.enablement.oracle.ui/src/org/eclipse/datatools/enablement/oracle/internal/ui/drivers/messages.properties
@@ -15,8 +15,8 @@
 CUI_NEWCW_DATABASE_LBL_UI_ = &SID:
 CUI_NEWCW_HOST_LBL_UI_ = &Host:
 CUI_NEWCW_PORT_LBL_UI_ = Port nu&mber:
-CUI_NEWCW_USERNAME_LBL_UI_ = User name:
-CUI_NEWCW_PASSWORD_LBL_UI_ = Password:
+CUI_NEWCW_USERNAME_LBL_UI_ = User n&ame:
+CUI_NEWCW_PASSWORD_LBL_UI_ = Pass&word:
 CUI_NEWCW_SAVE_PASSWORD_LBL_UI_ = Sa&ve password
 CUI_NEWCW_CONNECTIONURL_LBL_UI_= Connection UR&L:
 ALL_CATALOGS_OPTION_UI_ = All
