[232433]  Mnemonics missing for user name and password fields in various driverUIContributors

--- a/plugins/org.eclipse.datatools.connectivity.apache.derby.ui/src/org/eclipse/datatools/connectivity/apache/derby/internal/ui/connection/drivers/messages.properties
+++ b/plugins/org.eclipse.datatools.connectivity.apache.derby.ui/src/org/eclipse/datatools/connectivity/apache/derby/internal/ui/connection/drivers/messages.properties
@@ -3,8 +3,8 @@ DerbyEmbeddedDriverUIContributor.1=Browse...
 DerbyEmbeddedDriverUIContributor.2=Create database (if required)
 DerbyEmbeddedDriverUIContributor.3=Upgrade database to current version
 DerbyEmbeddedDriverUIContributor.url.label = URL:
-DerbyEmbeddedDriverUIContributor.userName.label = User name:
-DerbyEmbeddedDriverUIContributor.password.label = Password:
+DerbyEmbeddedDriverUIContributor.userName.label = User n&ame:
+DerbyEmbeddedDriverUIContributor.password.label = Pass&word:
 DerbyEmbeddedDriverUIContributor.persistpassword.label = Save password
 DerbyEmbeddedDriverUIContributor.optionalProps.label = Optional properties:
 DerbyEmbeddedDriverUIContributor.summary.driverName.label = Driver name
@@ -27,8 +27,8 @@ CUI_NEWCW_DATABASE_LBL_UI_ = Databa&se:
 CUI_NEWCW_HOST_LBL_UI_ = &Host:
 CUI_NEWCW_PORT_LBL_UI_ = Port nu&mber:
 CUI_NEWCW_CONNECTIONURL_LBL_UI_= UR&L:
-CUI_NEWCW_USERNAME_LBL_UI_ = User name:
-CUI_NEWCW_PASSWORD_LBL_UI_ = Password:
+CUI_NEWCW_USERNAME_LBL_UI_ = User n&ame:
+CUI_NEWCW_PASSWORD_LBL_UI_ = Pass&word:
 CUI_NEWCW_SAVE_PASSWORD_LBL_UI_ = Sa&ve password
 CUI_NEWCW_DATABASE_SUMMARY_DATA_TEXT_ = Database
 CUI_NEWCW_HOST_SUMMARY_DATA_TEXT_ = Host
