[232433]  Mnemonics missing for user name and password fields in various driverUIContributors

--- a/plugins/org.eclipse.datatools.enablement.ibm.db2.iseries.ui/src/org/eclipse/datatools/enablement/ibm/db2/iseries/internal/ui/drivers/messages.properties
+++ b/plugins/org.eclipse.datatools.enablement.ibm.db2.iseries.ui/src/org/eclipse/datatools/enablement/ibm/db2/iseries/internal/ui/drivers/messages.properties
@@ -17,8 +17,8 @@ CUI_NEWCW_HOST_LBL_UI_ = &Host:
 CUI_NEWCW_PORT_LBL_UI_ = Port nu&mber:
 CUI_NEWCW_CONNECTIONURL_LBL_UI_= Connection UR&L:
 CUI_NEWCW_DEFDBNAME_VAL_UI_ = SAMPLE
-CUI_NEWCW_USERNAME_LBL_UI_ = User name:
-CUI_NEWCW_PASSWORD_LBL_UI_ = Password:
+CUI_NEWCW_USERNAME_LBL_UI_ = User n&ame:
+CUI_NEWCW_PASSWORD_LBL_UI_ = Pass&word:
 CUI_NEWCW_SAVE_PASSWORD_LBL_UI_ = Sa&ve password
 CUI_NEWCW_DATABASE_SUMMARY_DATA_TEXT_ = Database
 CUI_NEWCW_HOST_SUMMARY_DATA_TEXT_ = Host
