CheckIn: Fix bugzilla bug 231726 [Linux] Can not use right click menu to paste in SOAP request dialog.

--- a/plugins/org.eclipse.datatools.enablement.oda.ws.ui/src/org/eclipse/datatools/enablement/oda/ws/ui/i18n/messages.properties
+++ b/plugins/org.eclipse.datatools.enablement.oda.ws.ui/src/org/eclipse/datatools/enablement/oda/ws/ui/i18n/messages.properties
@@ -50,6 +50,7 @@ soapRequestPage.title.regenerateTemplate=Regenerate Template
 soapRequestPage.button.regenerateTemplate=&Regenerate Template
 soapRequestPage.button.insertParameter=&Insert Parameter...
 soapRequestPage.button.clear=&Clear
+soapRequestPage.paramEditDialog.title=Edit parameter property
 
 # ParameterInputDialog
 parameterInputDialog.column.name=Name
