CheckIn:Fix bugzilla bug 223831 BIDI3.4:DTP Wrong display for XPath Expression in the Row Mapping wizard

--- a/plugins/org.eclipse.datatools.enablement.oda.xml.ui/src/org/eclipse/datatools/enablement/oda/xml/ui/i18n/messages.properties
+++ b/plugins/org.eclipse.datatools.enablement.oda.xml.ui/src/org/eclipse/datatools/enablement/oda/xml/ui/i18n/messages.properties
@@ -27,8 +27,8 @@ designer.preview.preference.columnMappingPage.group.title=Column Mapping
 
 #row mapping page messages
 xPathChoosePage.messages.elementSelection.label=XML Element Selection
-xPathChoosePage.messages.elementSelection.item.absolutePath=XML elements named "{0}" at fixed absolute path\n( {1} )\n
-xPathChoosePage.messages.elementSelection.item.anyLocation=XML elements named "{0}" at any location\n( {1} )\n
+xPathChoosePage.messages.elementSelection.item.absolutePath=XML elements named "{0}" at fixed absolute path\n
+xPathChoosePage.messages.elementSelection.item.anyLocation=XML elements named "{0}" at any location\n
 xPathChoosePage.messages.elementSelection.disable.absolutePath=XML elements at fixed absolute path\n 
 xPathChoosePage.messages.elementSelection.disable.anyLocation=XML elements at any location\n 
 xPathChoosePage.messages.elementSelection.item.custom=C&ustom XPath Expression
