233114 external string for 'show schema' and 'show owner'

--- a/plugins/org.eclipse.datatools.enablement.sybase.ui/src/org/eclipse/datatools/enablement/sybase/ui/messages.properties
+++ b/plugins/org.eclipse.datatools.enablement.sybase.ui/src/org/eclipse/datatools/enablement/sybase/ui/messages.properties
@@ -167,3 +167,6 @@ JDBCProfileTabs.errors.requiredUID = User name required
 events.folder.name=Events
 webservices.folder.name=Web Services
 datatypes.folder.name=Data Types
+
+SybaseDatabaseProfileSettingPage.showOwner=Show database object &owner
+SybaseDatabaseProfileSettingPage.showSchema=Show &schema
