NEW - bug 240547: Overloaded term "vendor" in Driver Definition preference page is confusing https://bugs.eclipse.org/bugs/show_bug.cgi?id=240547

--- a/plugins/org.eclipse.datatools.connectivity/src/org/eclipse/datatools/connectivity/drivers/messages.properties
+++ b/plugins/org.eclipse.datatools.connectivity/src/org/eclipse/datatools/connectivity/drivers/messages.properties
@@ -37,7 +37,7 @@ TemplateDescriptor.msg.driverTypeDescriptorCreationError = Problem encountered w
 DriverPreferences.label.availableDrivers = Driver de&finitions:
 DriverPreferences.button.addDriver = Add...
 DriverPreferences.DriverTypeFilter=Driver Type Filter:
-DriverPreferences.VendorFilter=Vendor Filter:
+DriverPreferences.VendorFilter=Filter:
 DriverPreferences.NameColumn=Name
 DriverPreferences.DriverNameColumn=Driver Name
 DriverPreferences.VendorColumn=Vendor
