[241141]   Connection Filter Properties need to be externalized

--- a/plugins/org.eclipse.datatools.connectivity.sqm.core.ui/src/org/eclipse/datatools/connectivity/sqm/core/internal/ui/l10n/datatoolsCoreUI.properties
+++ b/plugins/org.eclipse.datatools.connectivity.sqm.core.ui/src/org/eclipse/datatools/connectivity/sqm/core/internal/ui/l10n/datatoolsCoreUI.properties
@@ -189,6 +189,7 @@ _UI_DEFAULT_MSG_SELECT_ONLY = Select the folder:
 #
 ## Filter Dialog
 #
+_UI_TITLE_FILTER_DIALOG = Connection Filter Properties
 _UI_TITLE_FILTER = Specify Filter
 _UI_DESCRIPTION_FILTER = Specify a filter by selecting a predicate and entering a value or by indicating whether to include or exclude a selection of items.
 _UI_DESCRIPTION_SELECTION_ONLY = Specify a filter by indicating whether to include or exclude a selection of items.
