241618 241619 241215 240278 237579  by Jue Wu

--- a/plugins/org.eclipse.datatools.sqltools.sqleditor/src/org/eclipse/datatools/sqltools/sqleditor/internal/templates/messages.properties
+++ b/plugins/org.eclipse.datatools.sqltools.sqleditor/src/org/eclipse/datatools/sqltools/sqleditor/internal/templates/messages.properties
@@ -1,6 +1,6 @@
 # template proposal
-TemplateProposal.displayString= {0} - {1}
-TemplateProposal.errorDialog.title=Template Evaluation Error
+TemplateProposal_displayString= {0} - {1}
+TemplateProposal_errorDialog_title=Template Evaluation Error
 
 SQLTemplateProposal_proposalInfo=After you fill in the table/procedure name variable, this intelligent template will be expanded into:<br>
 
