[244022]  User and Group Folders in DSE need infrastructure to support creating a new  User/Group

--- a/plugins/org.eclipse.datatools.connectivity.sqm.core.ui/src/org/eclipse/datatools/connectivity/sqm/core/internal/ui/l10n/datatoolsCoreUI.properties
+++ b/plugins/org.eclipse.datatools.connectivity.sqm.core.ui/src/org/eclipse/datatools/connectivity/sqm/core/internal/ui/l10n/datatoolsCoreUI.properties
@@ -237,6 +237,8 @@ SCHEMA_MANAGEMENT_CREATE_MQT = MQT
 SCHEMA_MANAGEMENT_CREATE_ALIAS = Alias
 SCHEMA_MANAGEMENT_CREATE_TRIGGER = Trigger
 SCHEMA_MANAGEMENT_CREATE_ROLE = Role
+SCHEMA_MANAGEMENT_CREATE_USER = User
+SCHEMA_MANAGEMENT_CREATE_GROUP = Group
 #
 SCHEMA_MANAGEMENT_ADD_COLUMN = Column
 SCHEMA_MANAGEMENT_ADD_CHECK_CONSTRAINT = Check Constraint
