--- a/plugins/org.eclipse.datatools.enablement.oda.ecore.ui/src/org/eclipse/datatools/enablement/oda/ecore/ui/i18n/messages.properties
+++ b/plugins/org.eclipse.datatools.enablement.oda.ecore.ui/src/org/eclipse/datatools/enablement/oda/ecore/ui/i18n/messages.properties
@@ -2,6 +2,7 @@ DataSourceWizardPage.message.default=Data Source Connection Properties
 DataSourceWizardPage.group.modelLocation=Model Location
 DataSourceWizardPage.button.useFilesystem=Use Model from Filesystem
 DataSourceWizardPage.button.useWorkspace=Use Model in Workspace
+DataSourceWizardPage.button.useLiteralURI=Use Model with URI
 DataSourceWizardPage.label.model=&Model:
 DataSourceWizardPage.button.browse=Browse...
 DataSourceWizardPage.dialog.workspace=Select serialized model
@@ -12,6 +13,7 @@ DataSetQueryWizardPage.message.default=Define the query text for the data set
 DataSetQueryWizardPage.label.invariant=OCL Invariant &Context (optional):
 DataSetQueryWizardPage.label.query=Boolean OCL &Expression:
 DataSetQueryWizardPage.message.loadError=Got an error trying to load: 
+DataSetQueryWizardPage.message.noEPackage=Couldn't get EPackage for model
 DataSetQueryWizardPage.message.designUpdateError=Got an error when updating the design: 
 DataSetQueryWizardPage.message.expressionRequired=An expression is required.
 
