Bug 243099: second part of bug -- unable to handle Ecore models with only a root element and no children; unable to handle column selection of just an EClass.

--- a/plugins/org.eclipse.datatools.enablement.oda.ecore.ui/src/org/eclipse/datatools/enablement/oda/ecore/ui/i18n/messages.properties
+++ b/plugins/org.eclipse.datatools.enablement.oda.ecore.ui/src/org/eclipse/datatools/enablement/oda/ecore/ui/i18n/messages.properties
@@ -20,5 +20,5 @@ DataSetQueryWizardPage.message.expressionRequired=An expression is required.
 DataSetColumnsWizardPage.message.default=Define the columns for the data set
 DataSetColumnsWizardPage.message.loadError=Got an error trying to load: 
 DataSetColumnsWizardPage.message.noEPackage=Couldn't get EPackage for model
-DataSetColumnsWizardPage.message.noColumnSelected=At least one column must be selected
+DataSetColumnsWizardPage.message.noColumnSelected=At least one column (EAttribute or EReference) must be selected.  Selecting only EClasses is not currently supported.
 
