NEW - bug 232141: Misleading Labels for the Driver Dialog's Vendor and Version Columns https://bugs.eclipse.org/bugs/show_bug.cgi?id=232141

--- a/plugins/org.eclipse.datatools.connectivity/src/org/eclipse/datatools/connectivity/drivers/messages.properties
+++ b/plugins/org.eclipse.datatools.connectivity/src/org/eclipse/datatools/connectivity/drivers/messages.properties
@@ -40,8 +40,8 @@ DriverPreferences.DriverTypeFilter=Driver Type Filter:
 DriverPreferences.VendorFilter=Filter:
 DriverPreferences.NameColumn=Name
 DriverPreferences.DriverNameColumn=Driver Name
-DriverPreferences.VendorColumn=Vendor
-DriverPreferences.VersionColumn=Version
+DriverPreferences.VendorColumn=System Vendor
+DriverPreferences.VersionColumn=System Version
 DriverPreferences.button.editDriver = &Edit...
 DriverPreferences.button.removeDriver = &Remove
 DriverPreferences.button.copyDriver = &Copy
@@ -54,7 +54,7 @@ DriverDefinitionsDialog.title = Available Driver Definitions
 DriverDialog.DriverTypeFilter=&Driver Type Filter:
 DriverDialog.VendorFilter=&Vendor Filter:
 DriverDialog.DriverNameColumn=Driver Name
-DriverDialog.VendorColumn=Vendor
+DriverDialog.VendorColumn=System Vendor
 DriverDialog.DialogMessage=Specify a driver template, then modify details in the fields below to provide a unique name, a list of required jars, and set any available and applicable property values.
 DriverDialog.Properties.Tab=Properties
 DriverDefinitionsDialog.message = Add, edit, or remove driver definitions to manage available driver definitions.
@@ -127,4 +127,4 @@ DriverDialog.AllFilter=All
 DriverDialog.NameColumn=Name
 DriverDialog.Name.Type.Tab=Name/Type
 DriverDialog.JarList.Tab=Jar List
-DriverDialog.Version=Version
+DriverDialog.Version=System Version
