Fix the bugzilla bug 245622:The parameters are changed to others and values are lost for Web Service data set after some steps back and forward [0707]  245922 :Exception is thrown out when click "Insert Parameter..." button without selecting parameters [0707]  247604, 247767:Ability to choose where the reponses from

--- a/plugins/org.eclipse.datatools.enablement.oda.ws.ui/src/org/eclipse/datatools/enablement/oda/ws/ui/i18n/messages.properties
+++ b/plugins/org.eclipse.datatools.enablement.oda.ws.ui/src/org/eclipse/datatools/enablement/oda/ws/ui/i18n/messages.properties
@@ -62,6 +62,7 @@ soapResponsePage.message.default=Edit the SOAP response.
 soapResponsePage.group.schema=Select SOAP Response Schema.
 soapResponsePage.group.xml=Select Sample SOAP response message.
 soapResponsePage.radio.defaultSchema=Use &operation response schema defined in data source WSDL.
+soapResponsePage.radio.reponseSchema=Use schema from &response .
 soapResponsePage.radio.externalSchema=Use external XML &schema file:
 soapResponsePage.radio.endPoint=Query Web Services at SOAP &end point:
 soapResponsePage.radio.externalXML=Use external sample &data file
