--- a/plugins/org.eclipse.datatools.enablement.oda.xml.ui/src/org/eclipse/datatools/enablement/oda/xml/ui/i18n/messages.properties
+++ b/plugins/org.eclipse.datatools.enablement.oda.xml.ui/src/org/eclipse/datatools/enablement/oda/xml/ui/i18n/messages.properties
@@ -40,6 +40,7 @@ xPathChoosePage.FileNameIcon=File Name Icon
 xPathChoosePage.XMLElementIcon=XML Element Icon
 xPathChoosePage.ColumnIcon=Column Icon
 xPathChoosePage.messages.btnAdd.tooltip=Use the selected node as XPath expression.
+xPathChoosePage.messages.noURLOfSourceOrSchema=No URL of XML source or XML schema provided.
 
 #sample xml data file page messages
 xmlDataSetSelectionPage.messages.lineofdata=lines of source data
