[257649] Improve Error Handling in ODA Profile Selection Editor Page

--- a/plugins/org.eclipse.datatools.connectivity.oda.design.ui/src/org/eclipse/datatools/connectivity/oda/design/ui/nls/messages.properties
+++ b/plugins/org.eclipse.datatools.connectivity.oda.design.ui/src/org/eclipse/datatools/connectivity/oda/design/ui/nls/messages.properties
@@ -27,7 +27,8 @@ designSession_flushFailed=Unable to flush the current data set design session.
 designSession_invalidArgument=Invalid argument specified in design session method.
 designSession_invalidEditApiCall=Invalid design session API call for editing a design.
 designSession_invalidNewDesignApiCall=Invalid design session API call for creating a new design.
-designSession_invalidProfileName=Unable to locate the specified linked profile ({0}).
+designSession_invalidProfileName=Unable to locate the linked profile ({0}) in the specified Connection Profile Store.
+designSession_invalidProfileNameOrFilePath=Unable to locate the linked profile ({0}) or the connection profile store file ({1}) specified in the data source design.
 designSession_missingDataSetUIElement=No dataSetUI element is defined for OdaDataSourceId ({0}) and OdaDataSetId ({1}).
 manifest_missingAttributeValue=Missing value in required attribute ({0}).
 manifest_missingDataSetElementId=The dataSetElementID argument requires a value.
