245494: SQL Editor should allow token matching

--- a/plugins/org.eclipse.datatools.sqltools.sqleditor/src/org/eclipse/datatools/sqltools/sqleditor/internal/actions/messages.properties
+++ b/plugins/org.eclipse.datatools.sqltools.sqleditor/src/org/eclipse/datatools/sqltools/sqleditor/internal/actions/messages.properties
@@ -35,6 +35,9 @@ ExecuteSelectionSQLAction_tooltip=Execute Selected SQL Statements
 DMLDialogSelectionSQLAction_label=Edit in S&QL Query Builder...
 DMLDialogSelectionSQLAction_tooltip=Edit Selected SQL Statements in SQL Query Builder
 
+GotoMatchingTokenAction_label=Goto &Matching Token
+GotoMatchingTokenAction_tooltip=Matching Current Token
+
 RunAction_label=&Run...
 RunAction_tooltip=Run
 
