--- a/plugins/org.eclipse.datatools.sqltools.plan/src/org/eclipse/datatools/sqltools/plan/internal/ui/actions/messages.properties
+++ b/plugins/org.eclipse.datatools.sqltools.plan/src/org/eclipse/datatools/sqltools/plan/internal/ui/actions/messages.properties
@@ -20,3 +20,5 @@ LoadPlanAction_errorinfo=Failed to load plan from file.
 SavePlanAction_overwrite_q=The file ''{0}'' already exists. Do you want to replace the existing file?
 SavePlanAction_question=Question
 SavePlanAction_builder_error=Unable to create the XML document builder
+PlanTypeDropDownAction_text=Plan Types
+PlanTypeDropDownAction_tooltip=Switch Plan Type
