185501: execute current statement

--- a/plugins/org.eclipse.datatools.sqltools.sqleditor/src/org/eclipse/datatools/sqltools/sqleditor/internal/actions/messages.properties
+++ b/plugins/org.eclipse.datatools.sqltools.sqleditor/src/org/eclipse/datatools/sqltools/sqleditor/internal/actions/messages.properties
@@ -32,6 +32,12 @@ ExecuteSQLAction_tooltip=Execute All SQL Statements
 ExecuteSelectionSQLAction_label=E&xecute Selected Text
 ExecuteSelectionSQLAction_tooltip=Execute Selected SQL Statements
 
+ExecuteSQLAsOneStatement_label=Exe&cute Selected Text As One Statement
+ExecuteSQLAsOneStatement_tooltip=Execute Selected Text As One Statement
+
+ExecuteCurrentSQLAction_label=Exec&ute Current Text
+ExecuteCurrentSQLAction_tooltip=Execute Current SQL Statements
+
 DMLDialogSelectionSQLAction_label=Edit in S&QL Query Builder...
 DMLDialogSelectionSQLAction_tooltip=Edit Selected SQL Statements in SQL Query Builder
 
