CheckIn: Fix bugzilla bug 261455 [Accessibility] Shortcut key conflict happens and description text f

--- a/plugins/org.eclipse.datatools.connectivity.oda.flatfile.ui/src/org/eclipse/datatools/connectivity/oda/flatfile/ui/i18n/messages.properties
+++ b/plugins/org.eclipse.datatools.connectivity.oda.flatfile.ui/src/org/eclipse/datatools/connectivity/oda/flatfile/ui/i18n/messages.properties
@@ -15,7 +15,7 @@ wizard.title.selectColumns=Select Columns
 wizard.defaultMessage.selectFolder=Select the folder that contains the flat files.
 wizard.defaultMessage.selectFile=Select the file and the columns for the data set.
 
-label.selectFolder=Select &folder: 
+label.selectFolder=S&elect folder: 
 label.selectFile=Select f&ile:
 label.fileFilter=File filte&r:
 label.includeTypeLine=Use second line as &data type indicator.
@@ -26,6 +26,8 @@ label.flatfileComma=CSV
 label.flatfileSemicolon=SSV
 label.flatfilePipe=PSV
 label.flatfileTab=TSV
+
+button.selectFolder.browse=B&rowse...
 
 editor.title.name=Name
 editor.title.originalName=Original Name
