--- a/plugins/org.eclipse.datatools.enablement.oda.xml.ui/src/org/eclipse/datatools/enablement/oda/xml/ui/i18n/messages.properties
+++ b/plugins/org.eclipse.datatools.enablement.oda.xml.ui/src/org/eclipse/datatools/enablement/oda/xml/ui/i18n/messages.properties
@@ -115,7 +115,7 @@ columnName.xPathName=XPath
 columnName.typeName=Type
 
 dataset.new=New Data Set
-file.choose=&Browse...
+file.choose=Br&owse...
 schema.choose=Brow&se...
 title.warning=Warning
 
