CheckIn: Fix bugzilla bug 261455 [Accessibility] Shortcut key conflict happens and description text for "..." button when create flat file data source [17].

--- a/plugins/org.eclipse.datatools.connectivity.oda.flatfile.ui/src/org/eclipse/datatools/connectivity/oda/flatfile/ui/i18n/messages.properties
+++ b/plugins/org.eclipse.datatools.connectivity.oda.flatfile.ui/src/org/eclipse/datatools/connectivity/oda/flatfile/ui/i18n/messages.properties
@@ -19,7 +19,7 @@ label.selectFolder=S&elect folder:
 label.selectFile=Select f&ile:
 label.fileFilter=File filte&r:
 label.includeTypeLine=Use second line as &data type indicator.
-label.includeColumnNameLine = Use first line as column &name indicator.
+label.includeColumnNameLine = Use first line &as column name indicator.
 label.selectCharset=Select &charset:
 label.selectFlatfileStyle=Select flatfile &style:
 label.flatfileComma=CSV
