[261452] Shortcut key Conflicts in Connection Profile UI Pages

--- a/plugins/org.eclipse.datatools.connectivity.oda.design.ui/src/org/eclipse/datatools/connectivity/oda/design/ui/nls/messages.properties
+++ b/plugins/org.eclipse.datatools.connectivity.oda.design.ui/src/org/eclipse/datatools/connectivity/oda/design/ui/nls/messages.properties
@@ -1,6 +1,6 @@
 #
 #************************************************************************
-# Copyright (c) 2006, 2008 Actuate Corporation.
+# Copyright (c) 2006, 2009 Actuate Corporation.
 # All rights reserved. This program and the accompanying materials
 # are made available under the terms of the Eclipse Public License v1.0
 # which accompanies this distribution, and is available at
@@ -44,8 +44,8 @@ profilePage_pageTitle=Select a Connection Profile
 profilePage_pageLabel=Connection Profile
 profilePage_selectProfileDefaultMessage=Select the connection profile from which to create a data source
 profilePage_label_profileStore=Connection Profile &Store:
-profilePage_button_browse=&Browse...
-profilePage_button_new=&New...
+profilePage_button_browse=B&rowse...
+profilePage_button_new=Ne&w...
 profilePage_odaTreeName=ODA Data Sources
 profilePage_checkboxLabel_useDefaultName=&Use the default data source name
 profilePage_label_dataSourceName=&Data Source Name:
@@ -55,7 +55,7 @@ profilePage_checkboxLabel_maintainLink=Use &externalized properties in Connectio
 profilePage_error_invalidName=Data source name is invalid.
 profilePage_error_invalidProfileStorePath=Invalid path for a connection profile store
 profileStoreCreationDialog_title=Create a Connection Profile Store
-profileStoreCreationDialog_grouptext=Select the connection profiles to be included in the store:
+profileStoreCreationDialog_grouptext=Select the connection &profiles to be included in the store:
 profileStoreCreationDialog_newbutton_tooltiptext=Create a new connection profile
 dbProfilePage_defaultPageMessage=Specify a JDBC Driver and Connection Details
 dbProfilePage_notInDesignSession=Unable to open a property page outside of an ODA design session.
