--- a/plugins/org.eclipse.datatools.enablement.oda.ws.ui/src/org/eclipse/datatools/enablement/oda/ws/ui/i18n/messages.properties
+++ b/plugins/org.eclipse.datatools.enablement.oda.ws.ui/src/org/eclipse/datatools/enablement/oda/ws/ui/i18n/messages.properties
@@ -21,22 +21,22 @@
 webServiceSelectionPage.message.default=Web Services Data Source
 webServiceSelectionPage.message.error=Specify the SOAP End Point URL or Select a WSDL Descriptor.
 webServiceSelectionPage.group.wsdl=WSDL Descriptor
-webServiceSelectionPage.group.endPoint=SOAP End Point
-webServiceSelectionPage.group.customClass=Custom Driver Class
-webServiceSelectionPage.group.classPath=Driver Class Path
+webServiceSelectionPage.group.endPoint=&SOAP End Point
+webServiceSelectionPage.group.customClass=&Custom Driver Class
+webServiceSelectionPage.group.classPath=&Driver Class Path
 webServiceSelectionPage.label.wsdl=If the WSDL descriptor of the Web Services is available, enter its URL or browse to its location in the local file system.
 webServiceSelectionPage.label.wsdlURI=&WSDL URL or Location:
 webServiceSelectionPage.label.endPoint=Specify the SOAP &End Point URL. You may omit this value if the end point defined in the WSDL is to be used,\nor if you are using a custom connection class that does not require a end point URL.
 webServiceSelectionPage.label.customClass=If connection and query to the Web Services is made through a custom &Java class, enter the fully qualified class name here.
 webServiceSelectionPage.label.classPath=A semicolon(;)-separated list of additional JAR files and directories to search for the custom driver class.
-webServiceSelectionPage.button.browse=&Browse...
+webServiceSelectionPage.button.browse=B&rowse...
 
 # OperationPage
 operationPage.message.default=Select an operation defined in the data source's WSDL descriptor.
 operationPage.message.operationChanged=Confirm to regenerate the SOAP request and reconnect the End Point.
 operationPage.title.operationChanged=Operation Changed
-operationPage.label.selectOpearation=Selected Operation
-operationPage.label.document=Documentation
+operationPage.label.selectOpearation=&Selected Operation
+operationPage.label.document=&Documentation
 
 # SoapParametersPage
 soapParametersPage.message.default=Enter the parameters of chosen WSDL operation.
