CheckIn: Fix bugzilla bug 265402 [Accessibility] Shortcut keys are missing during the creation of XML data set [17];Fix bugzilla bug 261471 [Accessibility] Shortcut key conflict happens and the static text should not be accessed when use keyboard during the creation of  Web Services data set [17]; Fix bugzilla bug 261461 [Accessibility] Shortcut key is missing and the static text should not be accessed when use keyboard during the creation of Web Services data source [17]

--- a/plugins/org.eclipse.datatools.enablement.oda.ws.ui/src/org/eclipse/datatools/enablement/oda/ws/ui/i18n/messages.properties
+++ b/plugins/org.eclipse.datatools.enablement.oda.ws.ui/src/org/eclipse/datatools/enablement/oda/ws/ui/i18n/messages.properties
@@ -26,8 +26,8 @@ webServiceSelectionPage.group.customClass=&Custom Driver Class
 webServiceSelectionPage.group.classPath=&Driver Class Path
 webServiceSelectionPage.label.wsdl=If the WSDL descriptor of the Web Services is available, enter its URL or browse to its location in the local file system.
 webServiceSelectionPage.label.wsdlURI=&WSDL URL or Location:
-webServiceSelectionPage.label.endPoint=Specify the SOAP &End Point URL. You may omit this value if the end point defined in the WSDL is to be used,\nor if you are using a custom connection class that does not require a end point URL.
-webServiceSelectionPage.label.customClass=If connection and query to the Web Services is made through a custom &Java class, enter the fully qualified class name here.
+webServiceSelectionPage.label.endPoint=Specify the SOAP End Point URL. You may omit this value if the end point defined in the WSDL is to be used,\nor if you are using a custom connection class that does not require a end point URL.
+webServiceSelectionPage.label.customClass=If connection and query to the Web Services is made through a custom Java class, enter the fully qualified class name here.
 webServiceSelectionPage.label.classPath=A semicolon(;)-separated list of additional JAR files and directories to search for the custom driver class.
 webServiceSelectionPage.button.browse=B&rowse...
 
@@ -42,20 +42,23 @@ operationPage.label.document=&Documentation
 soapParametersPage.message.default=Enter the parameters of chosen WSDL operation.
 soapParametersPage.button.selectAll=&Select All
 soapParametersPage.button.deselectAll=&Deselect All
+soapParametersPage.column.paramName=N&ame
+soapParametersPage.column.dataType=Data &Type
 
 # SoapRequestPage
 soapRequestPage.message.default=Edit the SOAP request template of this data set. You may leave the text empty if your data source's custom connecion class code does not require a query text.
 soapRequestPage.message.regenerateTemplate=This will regenerate the query text template based on the SOAP operation you have selected. It will remove any modifications you have made to the text.\n\nAre you sure?
 soapRequestPage.title.regenerateTemplate=Regenerate Template
 soapRequestPage.button.regenerateTemplate=&Regenerate Template
-soapRequestPage.button.insertParameter=&Insert Parameter...
+soapRequestPage.button.insertParameter=&Edit Parameter...
 soapRequestPage.button.clear=&Clear
 soapRequestPage.paramEditDialog.title=Edit parameter property
 
 # ParameterInputDialog
-parameterInputDialog.column.name=Name
-parameterInputDialog.column.type=Data Type
-parameterInputDialog.column.defaultValue=Default Value
+parameterInputDialog.column.name=&Name
+parameterInputDialog.column.type=Data &Type
+parameterInputDialog.column.defaultValue=Default &Value
+parameterInputDialog.button.edit=&Edit...
 
 # SoapResponsePage
 soapResponsePage.message.default=Edit the SOAP response.
@@ -63,10 +66,11 @@ soapResponsePage.group.schema=Select SOAP Response Schema.
 soapResponsePage.group.xml=Select Sample SOAP response message.
 soapResponsePage.radio.defaultSchema=Use &operation response schema defined in data source WSDL.
 soapResponsePage.radio.reponseSchema=Use schema from &response .
-soapResponsePage.radio.externalSchema=Use external XML &schema file:
+soapResponsePage.radio.externalSchema=Use external &XML schema file:
 soapResponsePage.radio.endPoint=Query Web Services at SOAP &end point:
 soapResponsePage.radio.externalXML=Use external sample &data file
-soapResponsePage.button.browse=&Browse...
+soapResponsePage.button.browse1=Bro&wse...
+soapResponsePage.button.browse2=Brow&se...
 soapResponsePage.button.connect=&Connect Now
 
 # XMLTableMappingPage
