--- a/plugins/org.eclipse.datatools.enablement.oda.xml.ui/src/org/eclipse/datatools/enablement/oda/xml/ui/i18n/messages.properties
+++ b/plugins/org.eclipse.datatools.enablement.oda.xml.ui/src/org/eclipse/datatools/enablement/oda/xml/ui/i18n/messages.properties
@@ -27,10 +27,10 @@ designer.preview.preference.columnMappingPage.group.title=Column Mapping
 
 #row mapping page messages
 xPathChoosePage.messages.elementSelection.label=XML Element Selection
-xPathChoosePage.messages.elementSelection.item.absolutePath=XML elements named "{0}" at fixed absolute path\n
-xPathChoosePage.messages.elementSelection.item.anyLocation=XML elements named "{0}" at any location\n
-xPathChoosePage.messages.elementSelection.disable.absolutePath=XML elements at fixed absolute path\n 
-xPathChoosePage.messages.elementSelection.disable.anyLocation=XML elements at any location\n 
+xPathChoosePage.messages.elementSelection.item.absolutePath=&XML elements named "{0}" at fixed absolute path\n
+xPathChoosePage.messages.elementSelection.item.anyLocation=XML &elements named "{0}" at any location\n
+xPathChoosePage.messages.elementSelection.disable.absolutePath=&XML elements at fixed absolute path\n 
+xPathChoosePage.messages.elementSelection.disable.anyLocation=XML &elements at any location\n 
 xPathChoosePage.messages.elementSelection.item.custom=C&ustom XPath Expression
 xPathChoosePage.messages.xPathExpression=&XPath Expression
 xPathChoosePage.messages.xmlStructure=XML Structure
