CheckIn: Fix bugzilla bug 266776 [Accessibility]Delete button is gray when using Tab key to select a column in Flatfile dataset;  Fix bugzilla bug 266777 Some buttons in Flatfile dataset need tooltip

--- a/plugins/org.eclipse.datatools.connectivity.oda.flatfile.ui/src/org/eclipse/datatools/connectivity/oda/flatfile/ui/i18n/messages.properties
+++ b/plugins/org.eclipse.datatools.connectivity.oda.flatfile.ui/src/org/eclipse/datatools/connectivity/oda/flatfile/ui/i18n/messages.properties
@@ -50,6 +50,10 @@ tooltip.psv=Pipe-{ | } Seperated Values
 tooltip.tsv=Tab-{ Tab } Seperated Values
 tooltip.columnnameline=Please make sure the existence of column names\n in the first row of the selected file.
 tooltip.typeline=Please make sure the existence of data type line\n in the second row of the selected file.
+tooltip.button.add=Add all the selected columns from the left table to the flat file data set.
+tooltip.button.up=Move up the selected item.
+tooltip.button.down=Move down the selected item.
+tooltip.button.delete=Delete the selected item.
 error.selectFolder=Please select a valid folder.
 error.selectColumns=Please select at least one column for this data set.
 error.emptyPath=Please enter a path.
