CheckIn: Fix bugzilla bug 269930 The instruction of the dialogue of "Column Mapping" is missing

--- a/plugins/org.eclipse.datatools.enablement.oda.xml.ui/src/org/eclipse/datatools/enablement/oda/xml/ui/i18n/messages.properties
+++ b/plugins/org.eclipse.datatools.enablement.oda.xml.ui/src/org/eclipse/datatools/enablement/oda/xml/ui/i18n/messages.properties
@@ -70,9 +70,11 @@ ColumnMappingTable.downButton.tooltip=Move column mapping Down.
 ColumnMappingTable.removeButton.tooltip=Remove column mapping.
 ColumnMappingTable.editButton.tooltip=Edit column mapping.
 ColumnMappingTable.previewButton.tooltip=Preview the sample XML data. 
+ColumnMappingDialog.group.message=XPath Selection
 ColumnMappingDialog.info.columnName=&Column Name:
 ColumnMappingDialog.info.xPath=&XPath Expression:
 ColumnMappingDialog.info.dataType=&Data Type:
+ColumnMappingDialog.dialog.info=Select one of the predefined XPath for the current column, or please enter another XPath expression. 
 ColumnMappingDialog.prompt.maxRow=The source data is more than 500 lines. Only the first 500 lines can be previewed in this page.
 XMLDataPreviewDialog.title=Sample XML Data
 
