--- a/plugins/org.eclipse.datatools.connectivity.apache.derby.ui/src/org/eclipse/datatools/connectivity/apache/derby/internal/ui/connection/drivers/messages.properties
+++ b/plugins/org.eclipse.datatools.connectivity.apache.derby.ui/src/org/eclipse/datatools/connectivity/apache/derby/internal/ui/connection/drivers/messages.properties
@@ -1,12 +1,12 @@
-DerbyEmbeddedDriverUIContributor.0=Database location:
-DerbyEmbeddedDriverUIContributor.1=Browse...
-DerbyEmbeddedDriverUIContributor.2=Create database (if required)
-DerbyEmbeddedDriverUIContributor.3=Upgrade database to current version
-DerbyEmbeddedDriverUIContributor.url.label = URL:
-DerbyEmbeddedDriverUIContributor.userName.label = User n&ame:
+DerbyEmbeddedDriverUIContributor.0=D&atabase location\:
+DerbyEmbeddedDriverUIContributor.1=B&rowse...
+DerbyEmbeddedDriverUIContributor.2=&Create database (if required)
+DerbyEmbeddedDriverUIContributor.3=Up&grade database to current version
+DerbyEmbeddedDriverUIContributor.url.label = &URL\:
+DerbyEmbeddedDriverUIContributor.userName.label = U&ser name\:
 DerbyEmbeddedDriverUIContributor.password.label = Pass&word:
-DerbyEmbeddedDriverUIContributor.persistpassword.label = Save password
-DerbyEmbeddedDriverUIContributor.optionalProps.label = Optional properties:
+DerbyEmbeddedDriverUIContributor.persistpassword.label = Sa&ve password
+DerbyEmbeddedDriverUIContributor.optionalProps.label = Optional &properties\:
 DerbyEmbeddedDriverUIContributor.summary.driverName.label = Driver name
 DerbyEmbeddedDriverUIContributor.summary.connProps.label = Optional properties
 DerbyEmbeddedDriverUIContributor.summary.userName.label = User name
@@ -14,8 +14,8 @@ DerbyEmbeddedDriverUIContributor.summary.password.label = Password
 DerbyEmbeddedDriverUIContributor.summary.url.label = URL
 DerbyEmbeddedDriverUIContributor.FileDialog.title.filebrowse = Browse for Database Folder
 DerbyEmbeddedDriverUIContributor.FileDialog.msg.filebrowse = Select the folder that corresponds to your Derby database.
-DerbyEmbeddedDriverUIContributor.general.tab = General
-DerbyEmbeddedDriverUIContributor.optional.tab = Optional
+DerbyEmbeddedDriverUIContributor.general.tab = G&eneral
+DerbyEmbeddedDriverUIContributor.optional.tab = &Optional
 DerbyEmbeddedDriverUIContributor.optionalproperties.label = Optional properties:
 CUI_NEWCW_SAVE_PASSWORD_SUMMARY_DATA_TEXT_ = Save password
 CUI_NEWCW_TRUE_SUMMARY_DATA_TEXT_ = true
@@ -34,7 +34,6 @@ CUI_NEWCW_DATABASE_SUMMARY_DATA_TEXT_ = Database
 CUI_NEWCW_HOST_SUMMARY_DATA_TEXT_ = Host
 CUI_NEWCW_PORT_SUMMARY_DATA_TEXT_ = Port number
 CUI_NEWCW_USERNAME_SUMMARY_DATA_TEXT_ = User name
-CUI_NEWCW_SAVE_PASSWORD_SUMMARY_DATA_TEXT_ = Save password
 CUI_NEWCW_URL_SUMMARY_DATA_TEXT_ = URL
 
 CUI_NEWCW_VALIDATE_DATABASE_REQ_UI_ = Enter a database name.
