--- a/plugins/org.eclipse.datatools.sqltools.sqlscrapbook/src/org/eclipse/datatools/sqltools/internal/sqlscrapbook/preferences/messages.properties
+++ b/plugins/org.eclipse.datatools.sqltools.sqlscrapbook/src/org/eclipse/datatools/sqltools/internal/sqlscrapbook/preferences/messages.properties
@@ -1,3 +1,4 @@
 SQLFilePage_description=General settings for SQL files/scrapbooks
 SQLFilePage_default_connection=Default connection information for new SQL files/scrapbooks
-SQLFilePage_override_profile=&Persist the target connection information when executing multiple SQL files 
+SQLFilePage_override_profile=&Persist the target connection information when executing multiple SQL files
+SQLFilePage_default_open=SQL file is default &opened after creation
