BZ-221362 BZ-269480 BZ-231401

--- a/plugins/org.eclipse.datatools.sqltools.sqlscrapbook/src/org/eclipse/datatools/sqltools/internal/sqlscrapbook/connection/messages.properties
+++ b/plugins/org.eclipse.datatools.sqltools.sqlscrapbook/src/org/eclipse/datatools/sqltools/internal/sqlscrapbook/connection/messages.properties
@@ -21,6 +21,8 @@ ConnectionInfoGroup_database=Data&base:
 ConnectionInfoGroup_status=Status:
 ConnectionInfoGroup_status_connected=Connected
 ConnectionInfoGroup_status_disconnected=Disconnected
+ConnectionInfoGroup_status_autocommit=Auto Commit
+ConnectionInfoGroup_status_manualcommit=Manual Commit
 FilesConnectionInfoDialog_column_name=File name
 FilesConnectionInfoDialog_column_type=Database server type
 FilesConnectionInfoDialog_column_profile=Profile
