[262874] ODA Dynamic Query Result Specification - refined experimental API to include null value ordering type in sort specification

--- a/plugins/org.eclipse.datatools.connectivity.oda/src/org/eclipse/datatools/connectivity/oda/nls/messages.properties
+++ b/plugins/org.eclipse.datatools.connectivity.oda/src/org/eclipse/datatools/connectivity/oda/nls/messages.properties
@@ -34,6 +34,7 @@ manifest_NO_LOG_FILENAME_PREFIX_DEFINED=The ODA driver plugin.xml is missing a l
 sortSpec_INVALID_SORT_MODE_SPECIFIED=Invalid sort mode specified: {0}.
 sortSpec_NULL_COLUMN_NAME_SPECIFIED=Null column name specified.
 sortSpec_INVALID_COLUMN_NAME_SPECIFIED=Invalid column name specified: {0}.
+sortSpec_INVALID_NULL_ORDERING=Invalid null ordering value: {0}.
 sortSpec_INVALID_SORT_ORDER_SPECIFIED=Invalid sort order specified: {0}.
 sortSpec_NO_DYNAMIC_SORT_KEY_FOR_SORTMODENONE=This sortSpec with sortModeNone does not allow any dynamic sort key.
 sortSpec_ONE_SORTCOLUMN_FOR_SINGLE_COLUMN_MODE=A sort column already exists.  The sortModeSingleColumn mode allows a maximum of one dynamic sort column.
