--- a/plugins/org.eclipse.datatools.connectivity.oda.design.ui/src/org/eclipse/datatools/connectivity/oda/design/ui/nls/messages.properties
+++ b/plugins/org.eclipse.datatools.connectivity.oda.design.ui/src/org/eclipse/datatools/connectivity/oda/design/ui/nls/messages.properties
@@ -58,7 +58,7 @@ profilePage_error_invalidProfileStorePath=Invalid path for a connection profile 
 profileStoreCreationDialog_title=Create a Connection Profile Store
 profileStoreCreationDialog_grouptext=Select the connection &profiles to be included in the store:
 profileStoreCreationDialog_newbutton_tooltiptext=Create a new connection profile
-dbProfilePage_defaultPageMessage=Specify a JDBC Driver and Connection Details
+dbProfilePage_defaultPageMessage=Verify the JDBC Driver and Connection Details
 dbProfilePage_notInDesignSession=Unable to open a property page outside of an ODA design session.
 dbProfilePage_noCustomPage=Unable to find and open the database driver specific property page.
 preferencesPage_openDataAccessDescription=Set the preferences for individual Open Data Access data sources \nby using the pages under this node.
