--- a/plugins/org.eclipse.datatools.connectivity.sqm.core.ui/src/org/eclipse/datatools/connectivity/sqm/core/internal/ui/l10n/datatoolsCoreUI.properties
+++ b/plugins/org.eclipse.datatools.connectivity.sqm.core.ui/src/org/eclipse/datatools/connectivity/sqm/core/internal/ui/l10n/datatoolsCoreUI.properties
@@ -86,7 +86,7 @@ DATATOOLS.CORE.UI.QUICKFIX.REMOVE_DANGLING = Remove Dangling Reference from Mode
 #
 ## FE Action
 #
-GENERATE_DDL_MENU_TEXT = Generate DDL...
+GENERATE_DDL_MENU_TEXT = Generate &DDL...
 
 #
 ## FE and RE Wizards
